apply plugin: 'java'
apply plugin: 'maven'

group = 'io.github.hedgehog1029'
version = '0.2.5'

description = "A plugin framework for Spigot/Bukkit."

sourceCompatibility = 1.8
targetCompatibility = 1.8

uploadArchives {
    repositories {
        mavenDeployer {
            mavenLocal()
        }
    }
}

repositories {
     maven { url "http://repo.maven.apache.org/maven2" }
}

dependencies {
}
